terraform-infra/SecurityGroup.tf
# This SG for Public ALB that expose to Public 
resource "aws_security_group" "public_alb_sg" {
  vpc_id = aws_vpc.main.id
  ingress { # it only allows 80 
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# its port 80 was open but only access by the ALB sg   
resource "aws_security_group" "web_sg" {
  vpc_id = aws_vpc.main.id
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.public_alb_sg.id] #added public alb SG so the incoming traffic coming form ALB are recived by web SG
  }
}

# This is for internal ALB but only access the traffic form Web_sg on port no 8080
resource "aws_security_group" "internal_alb_sg" {
  vpc_id = aws_vpc.main.id
  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.web_sg.id] # traffic allowed form web SG 
  }
}

# This for App tier  
resource "aws_security_group" "app_sg" {
  vpc_id = aws_vpc.main.id
  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.internal_alb_sg.id] #traffic allowed from internal ALB 
  }
}

# This is for DB that open DB on port no 3306
resource "aws_security_group" "db_sg" {
  vpc_id = aws_vpc.main.id
  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.app_sg.id] # and only open for App_sg 
  }
}
